<resources>
    <string name="app_name">Pet Picker</string>
    <string name="network_unavailable_toast">Network is unavailable. Please try again later.</string>
    <string name="pet_grid_image_description">Image of pet</string>
    <string name="pet_detail_image_description">Large photo of pet</string>
    <string name="petfinder_tribute_text">powered by the Petfinder API</string>
    <string name="find_nearby_shelters_text">Find nearby pet shelters</string>
    <string name="zip_code_search_button">Search for shelters with entered zip code</string>
    <string name="pick_pets_shelter_detail_button_text">PICK PETS</string>
    <string name="address_found">Address has been found</string>
    <string name="no_address_found">Address not found</string>
    <string name="invalid_lat_long_used">Invalid lat/long</string>
    <string name="service_not_available">Service is not available right now</string>
    <string name="empty_adoption_grid_text">No pets currently available for adoption.</string>
    <string name="no_shelters_available_list_text">There are no shelters available for this location.</string>
    <string name="pet_shelters_near_text">"Pet shelters near: "</string>
    <string name="pet_grid_empty_text">You don\'t have any pet picks!</string>
    <string name="my_pet_picks_title_text">My Pet Picks</string>
    <string name="widget_pet_pick_photo">Widget Pet Pick Photo</string>
    <string name="email_shelter_button_description">Email shelter button</string>
    <string name="call_shelter_button_description">Call shelter button</string>
    <string name="navigation_shelter_button_description">Navigation shelter button</string>
    <string name="share_title_text">Share</string>
    <string name="shortcut_label">My Pet Picks</string>
    <string name="shelter_right_pane_default_text">Select a shelter on the left to see more details</string>
    <string name="pet_right_pane_default_text">Select a pet on the left to see more details</string>
    <string name="null_address_text">Address is null</string>
</resources>
