<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pet_picks"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/my_pet_picks_title_text"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_title_text"
        app:showAsAction="ifRoom"/>

</menu>